--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,7 +53,7 @@ input#xpath{
 
 .highlights, textarea {
   padding: 10px;
-  font: 20px/28px 'Open Sans', sans-serif;
+  font: 20px/26px 'Open Sans', sans-serif;
   letter-spacing: 1px;
 }
 
@@ -105,6 +105,7 @@ mark {
   border-radius: 3px;
   color: transparent;
   background-color: #b1d5e5;
+  padding: .0em;
 }
 button.close{
 	width: 20px;
